--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This file lists all individuals having contributed content to the respository.
+# These individuals contributed to the hbnb project in this repository 
 
-Amos Mwongela Gabriel <amosmwongelah@gmail.com>
+Amos Mwongela Gabriel<amosmwongelah@gmail.com>
